--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>FoodDelivery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
 </head>
 <body>
@@ -167,18 +168,17 @@
             </a>
         </div>
     </main>
+
     <article id="adsPanel">
         <ul class="parent">
             <li onclick="window.location='http://google.com';">
-                <div class="pizza-container">
-                    <h4><mark>NEW</mark> Italian pizza!</h4>
-                </div>
+                <h2><mark>Our pizza menu!</mark></h2>
+                <div class="pizza-container"></div>
             </li>
 
             <li onclick="window.location='http://google.com';">
-                <div class="pizza-container-2">
-                    <h4><mark>NEW</mark>Restaurant open in BALTI</h4>
-                </div>
+                <h2><mark>Our sushi menu!</mark></h2>
+                <div class="pizza-container-2"></div>
             </li>
         </ul>
     </article>
@@ -187,37 +187,72 @@
         <ul class="news-list">
             <li>
                 <div class="news-list-content">
-gfddfg
+                    <img src="assets/img/news-img/restaurant.jpg" alt="x"/>
+                    <h2>From bussiness to<mark>premium restaurants!</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
-gfdfd
+                    <img src="assets/img/news-img/essence.jpg" alt="x">
+                    <h2><mark>World-wide</mark>restaurants in your city!</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
-gfddf
+                    <img src="assets/img/news-img/red.jpg" alt="x">
+                    <h2><mark>Coffee</mark> & <mark>High-End</mark>restaurants!</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
-gfddfg
+                    <img src="assets/img/news-img/strip.png" alt="x">
+                    <h2>We also have <mark>Strip clubs</mark> for our<mark>VIP clients!</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
-gfdgdfg
+                    <img src="assets/img/news-img/re4.jpg" alt="x">
+                    <h2><mark>Air-open</mark> with a beautiful view in the most beautiful countries.</h2>
                 </div>
             </li>
             <li>
-                <div class="news-list-content">
-                    gdfgdfg
-                </div>
+            <div class="news-list-content">
+                <img src="assets/img/news-img/sea.jpg" alt="x">
+                <h2><mark>Underwater</mark> restaurants in <mark>Dubai</mark> & <mark>Switzerland</mark>!</h2>
+            </div>
             </li>
         </ul>
-
     </section>
+
+    <footer>
+        <ul class="footer-content">
+            <li>
+                 <h2>Company</h2>
+                    <a href="X"> <h5>Personal</h5></a>
+                    <a href="X"> <h5>Contact</h5></a>
+                    <a href="X"><h5>All restaurants</h5></a>
+            </li>
+            <li>
+                <h2>Services</h2>
+                <a href="X"><h5>Join our team</h5></a>
+                <a href="X"><h5>World-Wide Delivery</h5></a>
+                <a href="X"><h5>Need degustators</h5></a>
+                <a href="X"><h5>Client-Card</h5></a>
+            </li>
+            <li>
+                <h2>Contact</h2>
+                <a href="https://www.facebook.com/zuck" target="_blank">
+                    <i class="fab fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="https://twitter.com/elonmusk" target="_blank">
+                    <i class="fab fa-twitter-square fa-3x"></i>
+                </a>
+                <a href="https://www.instagram.com/angelinajolieofficial/" target="_blank">
+                    <i class="fab fa-instagram fa-3x"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
