--- a/dessert.html
+++ b/dessert.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Pizza-Menu</title>
+    <title>Desserts-Menu</title>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
@@ -13,7 +13,7 @@
 
 <header>
     The most
-    <mark>delicious pizza ever!</mark>
+    <mark>delicious desserts ever!</mark>
     <nav>
         <ul>
             <li>
@@ -37,7 +37,7 @@
                         <a href="salad.html">Salads</a>
                         <a href="dessert.html">Desserts</a>
                         <a href="drinks.html">Drinks</a>
-                        <a href="snacks.html">Hot</a>
+                        <a href="snacks.html">Snacks</a>
                     </div>
                 </div>
             </li>
@@ -59,136 +59,149 @@
     </nav>
 </header>
 
-<section id="pizza-item">
-    <h2>Pizza</h2>
+<section>
+    <h2>Desserts</h2>
     <hr>
-    <ul class="pizza-list-parent">
+    <ul class="dessert-list-parent">
         <li>
-            <img src="assets/img/pizza/barb.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/bisc.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Barbeque</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
+                <div class="item-text">Biscuits</div>
+                <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
+                </div>
             </div>
             <div class="item-price" data-value="90">
-                <div class="item-text">90 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
                 </div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/ch.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/chcake.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">4Cheeses</div>
+                <div class="item-text">CheesseCake</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">80 lei</div>
+                <div class="item-text">40 lei</div>
                 <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/cap.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/cherry.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Capricioasa</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-1x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">70 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/diablo.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Diablo</div>
+                <div class="item-text">Cherry-IceCream</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">75 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">50 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/fun.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/cioco.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Funghi</div>
+                <div class="item-text">Chocolate-Ice-Cream</div>
+                <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">35 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/fondant.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Fondant</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">65 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">50 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/mar.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/fruit.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Margheritta</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-1x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">90 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/mario.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Mario</div>
+                <div class="item-text">FruitSalad</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">65 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/nap.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/greek.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Napolitana</div>
+                <div class="item-text">Greek-Ice</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">95 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/ran.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/nico.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Rancho</div>
+                <div class="item-text">Nico-Choco</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">79 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/pep.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/sacher.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Pepperoni</div>
+                <div class="item-text">Sacher</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">99 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/tir.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Tiramisu</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">35 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/tropic.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Tropic</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
