--- a/drinks.html
+++ b/drinks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Pizza-Menu</title>
+    <title>Drinks-Menu</title>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
@@ -13,7 +13,7 @@
 
 <header>
     The most
-    <mark>delicious pizza ever!</mark>
+    <mark>delicious and premium drinks ever!</mark>
     <nav>
         <ul>
             <li>
@@ -37,7 +37,7 @@
                         <a href="salad.html">Salads</a>
                         <a href="dessert.html">Desserts</a>
                         <a href="drinks.html">Drinks</a>
-                        <a href="snacks.html">Hot</a>
+                        <a href="snacks.html">Snacks</a>
                     </div>
                 </div>
             </li>
@@ -59,136 +59,110 @@
     </nav>
 </header>
 
-<section id="pizza-item">
-    <h2>Pizza</h2>
+<section>
+    <h2>Drinks</h2>
     <hr>
-    <ul class="pizza-list-parent">
+    <ul class="drinks-list-parent">
         <li>
-            <img src="assets/img/pizza/barb.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/cola.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Barbeque</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
+                <div class="item-text">Coca-Cola</div>
+                <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
+                </div>
             </div>
             <div class="item-price" data-value="90">
-                <div class="item-text">90 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
                 </div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/ch.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/pepsi.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">4Cheeses</div>
+                <div class="item-text">Pepsi</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">80 lei</div>
+                <div class="item-text">25 lei</div>
                 <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/cap.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/rcola.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Capricioasa</div>
+                <div class="item-text">RC-Cola</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-1x"></i></div>
+                        class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">70 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">20 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/diablo.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/fanta.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Diablo</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                <div class="item-text">Fanta</div>
+                <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">75 lei</div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">20 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/pizza/fun.jpg" alt="Could not load!">
+            <img src="assets/img/drinks/sexb.png" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Funghi</div>
+                <div class="item-text">SexOnTheBeach</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="80">
+                <div class="item-text">60 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/drinks/sprite.png" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Sprite</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">15 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/drinks/mojito.png" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Mojito</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/drinks/sweet.png" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">BlueLagoon</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
                 <div class="item-text">65 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/mar.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Margheritta</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-1x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">90 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/mario.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Mario</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">65 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/nap.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Napolitana</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">95 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/ran.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Rancho</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">79 lei</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/pizza/pep.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Pepperoni</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price">
-                <div class="item-text">99 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
