Restaurants... and JS

--- a/news.html
+++ b/news.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </li>
-            <li><a href="#">Restaurants</a></li>
+            <li><a href="restaurants.html">Restaurants</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="#">Job</a></li>
             <li>
