--- a/restaurants.html
+++ b/restaurants.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </li>
-            <li><a href="#">Restaurants</a></li>
+            <li><a href="restaurants.html">Restaurants</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="#">Job</a></li>
             <li>
@@ -72,36 +72,75 @@
 <section id="list-of-rest">
     <ul id="rest-ul">
         <li>
-            address: phone : icons : hours
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours1
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours2
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours3
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours4
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours5
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours6
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/highclass.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours7
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/high2.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours8
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/high2.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
         <li>
-            address: phone : icons : hours9
+            <div class="restaurant-container">
+                <img src="assets/img/rest-img/high2.jpg" alt="X">
+                <h2>Address: XXX 666, USA</h2>
+                <p>Phone: 68886660</p>
+            </div>
         </li>
-
     </ul>
 </section>
 
