JS for news, but need a fix css

--- a/news.html
+++ b/news.html
@@ -60,6 +60,14 @@
     </nav>
 </header>
 
+<div id="new-content">
+    <h2> This new is ...</h2>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aperiam assumenda ducimus est, quia repellat
+        soluta temporibus. Aliquid natus, praesentium. Accusantium delectus dignissimos ducimus eius eligendi
+        excepturi modi quidem unde.</p>
+    <a class="close-icon"><i class="far fa-window-close"></i></a>
+</div>
+
 <section class="news-panel">
     <ul class="news-content">
         <li>
@@ -67,7 +75,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -76,7 +84,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -85,7 +93,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -94,7 +102,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -103,7 +111,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -112,7 +120,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -121,7 +129,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -130,7 +138,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -139,7 +147,7 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
@@ -148,13 +156,13 @@
                 <h2>lorem</h2>
                 <img src="assets/img/newsph/croissant.jpg" alt="Snow">
                 <div class="button_cont">
-                    <a class="new-a" href="X" target="_blank" rel="nofollow">
+                    <a class="new-a">
                         <span>Go to the new...</span></a></div>
             </div>
         </li>
     </ul>
-
 </section>
+
 
 <footer>
     <ul class="footer-content">
