Added job cards.

--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
             </li>
             <li><a href="restaurants.html">Restaurants</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="#">Job</a></li>
+            <li><a href="job.html">Job</a></li>
             <li>
                 <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-content">
