JobCards/text different

--- a/job.html
+++ b/job.html
@@ -55,7 +55,7 @@
                 <img src="assets/img/job/pizzamker.jpg" alt="X">
             </div>
             <div class="details">
-                <h2>PizzaMaker<br><span>5+ y. of exp</span></h2>
+                <h2><a href="#">PizzaMaker</a><br><span>5+ y. of exp</span></h2>
             </div>
         </div>
 
@@ -64,7 +64,7 @@
                 <img src="assets/img/job/barmen.jpg" alt="X">
             </div>
             <div class="details">
-                <h2>Cocktail Maker<br><span>4+ yrs. of exp</span></h2>
+                <h2><a href="#">Cocktail Maker</a><br><span>4+ yrs. of exp</span></h2>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
                 <img src="assets/img/job/delivery.jpg" alt="X">
             </div>
             <div class="details">
-                <h2>Courier<br><span>At Least 20 years old.</span></h2>
+                <h2><a href="#">Courier</a><br><span>At Least 20 years old.</span></h2>
             </div>
         </div>
     </div>
