Events Added - links

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <li>
                 <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-content">
-                        <a href="xx">Corporative Party</a>
-                        <a href="xx">Birthdays</a>
-                        <a href="xx">ClientCard</a>
-                        <a href="xx">Fourchette</a>
-                        <a href="xx">Decorations</a>
+                        <a href="events.html">Corporative Party</a>
+                        <a href="events.html">Birthdays</a>
+                        <a href="events.html">ClientCard</a>
+                        <a href="events.html">Fourchette</a>
+                        <a href="events.html">Decorations</a>
                     </div>
                 </div>
             </li>
