--- a/hamb.html
+++ b/hamb.html
@@ -12,8 +12,6 @@
 <body>
 
 <header>
-    The most
-    <mark>delicious hamburgers ever!</mark>
     <nav>
         <ul>
             <li>
@@ -21,7 +19,9 @@
                     <div class="dropdown-content">
                         Your cart has :
                         <mark id="cart-count">0</mark>
-                        items in sum of <mark id="total-price"> 0</mark> lei!
+                        items in sum of
+                        <mark id="total-price"> 0</mark>
+                        lei!
                     </div>
                 </div>
             </li>
